linked to external resources

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,1 +1,5 @@
 %a.aor{:href => "http://austinonrails.org"} Austin on Rails
+%br/
+%a{:href => "https://github.com/bbwharris/AOR-Pipeline"} This on Github
+%br/
+%a{:href => "http://prezi.com/adouydzxq9ie/getting-started-with-rails-31-asset-pipeline/"} Associated Presentation
